--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,5 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,7 +10,8 @@
         android:src="@drawable/user"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/user_image" />
 
     <TextView
         android:id="@+id/helloTextView"
@@ -49,7 +49,8 @@
         app:cardElevation="0dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dividerView">
+        app:layout_constraintTop_toBottomOf="@+id/dividerView"
+        android:focusable="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,7 +60,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Bantuan"
+                android:text="@string/option_bantuan"
                 android:textAppearance="@style/CustomtextStyle3"
                 android:textColor="@color/yellow2" />
 
@@ -67,7 +68,8 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginStart="225dp"
-                app:srcCompat="@drawable/ic_arrow_circle_right" />
+                app:srcCompat="@drawable/ic_arrow_circle_right"
+                android:contentDescription="@string/arrow" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -94,7 +96,8 @@
         app:cardElevation="0dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dividerView2">
+        app:layout_constraintTop_toBottomOf="@+id/dividerView2"
+        android:focusable="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -104,7 +107,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tentang Aplikasi"
+                android:text="@string/option_about"
                 android:textColor="@color/yellow2"
                 android:textAppearance="@style/CustomtextStyle3" />
 
@@ -113,7 +116,8 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginStart="160dp"
-                app:srcCompat="@drawable/ic_arrow_circle_right" /> />
+                app:srcCompat="@drawable/ic_arrow_circle_right"
+                android:contentDescription="@string/arrow" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
