--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:fitsSystemWindows="true"
-    tools:context=".AboutActivity">
+    tools:context=".ui.info.AboutActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -37,7 +37,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Tentang"
+                        android:text="@string/tentang"
                         android:layout_marginTop="20dp"
                         android:textAppearance="@style/CustomtextStyle3"
                         android:layout_gravity="center"/>
@@ -46,12 +46,13 @@
                         android:layout_width="200dp"
                         android:layout_height="200dp"
                         android:src="@drawable/logo"
-                        android:layout_gravity="center"/>
+                        android:layout_gravity="center"
+                        android:contentDescription="@string/logo" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Apa itu BERAS.AI?"
+                        android:text="@string/apa_itu_beras_ai"
                         android:layout_marginTop="20dp"
                         android:layout_marginStart="15dp"
                         android:textAppearance="@style/CustomtextStyle3" />
@@ -64,12 +65,13 @@
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
                         android:textAppearance="@style/CustomtextStyle1"
-                        android:justificationMode="inter_word"/>
+                        android:justificationMode="inter_word"
+                        tools:targetApi="o" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Dikembangkan dan Dikelola oleh :"
+                        android:text="@string/pengembang"
                         android:layout_marginTop="20dp"
                         android:layout_marginStart="15dp"
                         android:textAppearance="@style/CustomtextStyle3" />
@@ -82,12 +84,13 @@
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
                         android:textAppearance="@style/CustomtextStyle1"
-                        android:justificationMode="inter_word"/>
+                        android:justificationMode="inter_word"
+                        tools:targetApi="o" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Version 1.0"
+                        android:text="@string/versi"
                         android:layout_marginTop="60dp"
                         android:layout_marginBottom="10dp"
                         android:layout_gravity="center"
