--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/home_fragment"
     android:background="@android:color/white"
     tools:context=".ui.home.HomeFragment">
@@ -19,7 +18,8 @@
             android:adjustViewBounds="true"
             android:background="@color/green1"
             android:alpha="0.5"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY"
+            android:contentDescription="@string/background" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -35,7 +35,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Selamat Datang,"
+        android:text="@string/welcome"
         android:textSize="16sp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
@@ -44,7 +44,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="User"
+        android:text="@string/user"
         android:layout_marginStart="20dp"
         android:layout_below="@id/title"
         android:textAppearance="@style/CustomtextStyle3"/>
@@ -67,7 +67,7 @@
                 android:id="@+id/tvPremium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tengkulak Beras"
+                android:text="@string/tengkulak_beras"
                 android:textColor="@color/green1"
                 android:textAppearance="@style/CustomtextStyle3"/>
 
@@ -77,13 +77,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:text="Temukan tengkulak beras di daerahmu. Jaminan kualitas beras terbaik!"
+                android:text="@string/tengkulak_desc"
                 android:textAppearance="@style/CustomtextStyle1" />
 
             <LinearLayout
                 android:layout_width="300dp"
                 android:layout_height="40dp"
                 android:background="@drawable/bg_search"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:elevation="5dp"
                 android:layout_gravity="center"
                 android:orientation="horizontal">
@@ -93,7 +95,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:iconifiedByDefault="false"
-                    android:paddingStart="-10dp"
                     android:queryHint="Ketik nama kota"
                     android:theme="@style/SearchView" />
 
