--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -38,6 +38,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/tentang"
+                        android:textColor="@color/black"
                         android:layout_marginTop="20dp"
                         android:textAppearance="@style/CustomtextStyle3"
                         android:layout_gravity="center"/>
@@ -53,6 +54,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/apa_itu_beras_ai"
+                        android:textColor="@color/black"
                         android:layout_marginTop="20dp"
                         android:layout_marginStart="15dp"
                         android:textAppearance="@style/CustomtextStyle3" />
@@ -61,6 +63,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/content_about"
+                        android:textColor="@color/black"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
@@ -72,6 +75,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/pengembang"
+                        android:textColor="@color/black"
                         android:layout_marginTop="20dp"
                         android:layout_marginStart="15dp"
                         android:textAppearance="@style/CustomtextStyle3" />
@@ -80,6 +84,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/developer"
+                        android:textColor="@color/black"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
@@ -91,6 +96,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/versi"
+                        android:textColor="@color/black"
                         android:layout_marginTop="60dp"
                         android:layout_marginBottom="10dp"
                         android:layout_gravity="center"
