--- a/app/src/main/res/layout/activity_bantuan.xml
+++ b/app/src/main/res/layout/activity_bantuan.xml
@@ -24,10 +24,10 @@
         <LinearLayout
             android:layout_width="160dp"
             android:layout_height="160dp"
-            android:layout_marginStart="120dp"
-            android:layout_marginTop="65dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/bantuan"
-            android:gravity="bottom"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:orientation="horizontal" />
 
     </FrameLayout>
@@ -59,6 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/cara_kerja_aplikasi"
+                android:textColor="@color/black"
                 android:textAppearance="@style/CustomtextStyle3"/>
 
             <View
@@ -75,6 +76,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:text="@string/content_work"
+                android:textColor="@color/black"
                 android:textAppearance="@style/CustomtextStyle1"
                 android:justificationMode="inter_word"
                 tools:targetApi="o" />
@@ -84,6 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/cara_menggunakan"
+                android:textColor="@color/black"
                 android:textAppearance="@style/CustomtextStyle3"/>
 
             <View
@@ -100,6 +103,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:text="@string/content_step"
+                android:textColor="@color/black"
                 android:textAppearance="@style/CustomtextStyle1"
                 android:justificationMode="inter_word"
                 tools:targetApi="o" />
