--- a/app/src/main/res/layout/list_konten.xml
+++ b/app/src/main/res/layout/list_konten.xml
@@ -4,6 +4,7 @@
     android:id="@+id/cvListMain"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardBackgroundColor="@color/white"
     android:layout_margin="10dp"
     android:clickable="false"
     app:cardCornerRadius="10dp"
@@ -31,6 +32,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@string/namaa_tengkulak"
+                android:textColor="@color/black"
                 android:textAppearance="@style/CustomtextStyle3" />
 
             <TextView
@@ -40,6 +42,7 @@
                 android:layout_marginBottom="5dp"
                 android:maxLines="3"
                 android:text="@string/lorem"
+                android:textColor="@color/black"
                 android:textAppearance="@style/CustomtextStyle1" />
 
             <Button
@@ -49,13 +52,12 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/background_text"
-                android:padding="10dp"
-                android:maxLines="1"
                 android:drawableEnd="@drawable/ic_arrow_forward"
+                android:maxLines="1"
                 android:text="@string/button_hubungi"
-                android:textAppearance="@style/CustomtextStyle1"/>
+                android:textAppearance="@style/CustomtextStyle1" />
 
-            </LinearLayout>
+        </LinearLayout>
 
     </RelativeLayout>
 
