--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/home"
+        android:iconTint="@color/black"
         android:title="@string/title_home" />
 
     <item
