--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.BERASAI" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.BERASAI" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green1</item>
         <item name="colorPrimaryVariant">@color/yellow1</item>
@@ -8,9 +8,12 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/green2</item>
         <item name="colorSecondaryVariant">@color/yellow2</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
     </style>
+
 </resources>
+
